--- a/config.yaml
+++ b/config.yaml
@@ -58,9 +58,11 @@ resources: >
 
    [Trello Golem Comms Archive](https://trello.com/b/95eZBUfT/golem-comms-archive)
 
-   [Latest AMA](https://www.reddit.com/r/GolemProject/comments/b11r0p/our_april_ama_is_happening_post_your_questions_we/)
+   [Latest AMA](https://www.reddit.com/r/GolemProject/comments/bpep3o/its_that_time_of_the_year_again_mays_edition_of/)
 
    [Kenny's Golem Stats](https://kascheri12.github.io/dashboard/)
+
+   [Golem Grid](https://golemgrid.com)
 
 videos: >
 
@@ -80,7 +82,9 @@ rules: >
 
    [Rule #1 is no attacking the team.](https://t.me/GolemProject/25630)
 
-   [Stay hydrated people. Rule #1](https://t.me/GolemProject/38490)
+   [Rule #1, Stay hydrated people.](https://t.me/GolemProject/38490)
+
+   [Rule #1: all airdrop messages are fake unless a mod posts them either here or on reddit.](https://t.me/GolemProject/39305)
 
 adminlist: >
 
