--- a/config.yaml
+++ b/config.yaml
@@ -1,15 +1,16 @@
 #Load bot token
+
 "bot_token": YOUR_BOT_TOKEN
-#Load bot token
+
 
 GNT_ID: 
 GNT_PLAYGROUND_ID: 
 
+previous:
+  fortune: 0
 
 TEAM:
-
-  -
-
+  - 
   - 
 
 #Messages
@@ -27,6 +28,8 @@ commands: >
    /extras - Extra commands
 
 extras: >
+
+   /fortune - Give me my fortune!
 
    /releases - Github releases page
 
@@ -62,7 +65,7 @@ resources: >
 
    [Trello Golem Comms Archive](https://trello.com/b/95eZBUfT/golem-comms-archive)
 
-   [Latest AMA](https://www.reddit.com/r/GolemProject/comments/bpep3o/its_that_time_of_the_year_again_mays_edition_of/)
+   [Latest AMA](https://www.reddit.com/r/GolemProject/comments/c9qx1e/yay_julys_edition_of_the_golem_ama_is_here_july/)
 
    [Kenny's Golem Stats](https://kascheri12.github.io/dashboard/)
 
@@ -97,6 +100,10 @@ adminlist: >
    Jasper - @jaspervv99
 
    MP - @mariapaulafn
+
+   Phillip - @golemgrid
+
+   Mattias - @Mat7ias
 
 releases: >
 
