include anti-spam. update vids

--- a/config.yaml
+++ b/config.yaml
@@ -49,7 +49,7 @@ resources: >
 
    [Github](https://github.com/golemfactory)
 
-   [Documentation](https://explorer.golem.network/documentation/understanding-beta/)
+   [Documentation](https://docs.golem.network/)
 
    [Blog](https://blog.golemproject.net/)
 
@@ -65,9 +65,11 @@ resources: >
 
    [Trello Golem Comms Archive](https://trello.com/b/95eZBUfT/golem-comms-archive)
 
-   [Latest AMA](https://www.reddit.com/r/GolemProject/comments/c9qx1e/yay_julys_edition_of_the_golem_ama_is_here_july/)
+   [Latest AMA](https://www.reddit.com/r/GolemProject/comments/esgkxa/summary_golem_factory_ama_january_22nd_2020/) +[summary](https://www.reddit.com/r/GolemProject/comments/esgkxa/summary_golem_factory_ama_january_22nd_2020/)
 
-   [Kenny's Golem Stats](https://kascheri12.github.io/dashboard/)
+   [Golem stats](https://stats.golem.network) and [Kenny's Golem Stats](https://kascheri12.github.io/dashboard/)
+
+   [Golem Port Check](https://golem.timjones.id.au/ports/)
 
    [Golem Grid](https://golemgrid.com)
 
